Fixed dropdown alignment for register

--- a/styles.css
+++ b/styles.css
@@ -724,6 +724,9 @@ header {
   }
 
   /* MENU  - Dropdown */
+  .register {
+    padding-left: 25px;
+  }
 
   .view-profile {
     display: flex;
